Significant overhaul for Stencyl 4.2.0